# tidx

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  config.toml  deny.toml  docker-compose.test.yml  docker-compose.yml  mise.toml  prometheus.yml  vercel.json
.agents/skills/indexing-tempo/: SKILL.md
.agents/skills/querying-tempo/: SKILL.md
.changelog/: big-dogs-slide.md  bright-falcon-soars.md  calm-tiger-rests.md  cli-perf-fixes.md  clickhouse-crate-migration.md  clickhouse-ddl-response.md  clickhouse-hex-io.md  cute-clouds-dance.md  cute-sheep-roll.md  evil-trees-fly.md  fix-array-types-and-allowlist.md  happy-pigs-write.md  multi-signature-support.md  plain-sharks-walk.md  pr-179-sql-validator-hardening.md  pr-180-clickhouse-query-safety.md  pr-181-query-result-bounds.md  pr-182-admin-access-control.md  status-fast-no-gap-scan.md  swift-crane-glides.md  tidy-ducks-rest.md  virtual-forward-ctes.md
.github/workflows/: auto-assign.yml  binary.yml  cargo-update.yml  docker.yml  release.yml  tag.yml  verify.yml
benches/: engine_bench.rs  query_bench.rs  scale_bench.rs  sync_bench.rs  write_bench.rs
db/: api_role.sql  api_role_create.sql  api_role_grants.sql  blocks.sql  extensions.sql  logs.sql  receipts.sql  sync_state.sql  txs.sql
db/clickhouse/: blocks.sql  logs.sql  receipts.sql  txs.sql
db/clickhouse/migrations/: 20260416_add_is_virtual_forward.sql  20260417_add_logs_virtual_forward_index.sql  20260430_add_blocks_consensus_proposer.sql
db/migrations/: 20260416_add_is_virtual_forward.sql  20260417_add_logs_virtual_forward_indexes.sql  20260430_add_blocks_consensus_proposer.sql
db/pgroll/: 20260415_prod_baseline.json  20260416_add_is_virtual_forward_column.json  20260417_add_logs_virtual_forward_indexes.json  20260430_add_blocks_consensus_proposer.json  README.md
docker/local/: config.toml  docker-compose.yml
docker/postgres/: Dockerfile
docker/postgres-pgduckdb/: Dockerfile  init-pg-duckdb.sql
docker/postgres-pgduckdb/tidx-abi/: Cargo.toml  Makefile  README.md
docker/postgres-pgduckdb/tidx-abi/src/: lib.rs
docker/prod/: alerts.yml  clickhouse-config.xml  config.toml  docker-compose.yml  prometheus.yml
grafana/dashboards/: ak47.json
grafana/provisioning/dashboards/: dashboards.yml
migrations/: 006_timescale_hypertables.sql  007_abi_functions.sql
scripts/: docker.sh  install.sh  verify_virtual_addresses_e2e.sh
src/: clickhouse.rs  config.rs  duckdb.rs  lib.rs  main.rs  metrics.rs  tempo.rs  types.rs  view_presets.rs  virtual_address.rs
src/api/: mod.rs  rate_limit.rs  views.rs
src/api/snapshots/: tidx__api__views__tests__cte_approval.snap  tidx__api__views__tests__cte_bool_param.snap  tidx__api__views__tests__cte_bytes32_indexed.snap  tidx__api__views__tests__cte_deposit.snap  tidx__api__views__tests__cte_int256.snap  tidx__api__views__tests__cte_swap.snap  tidx__api__views__tests__cte_transfer.snap  tidx__api__views__tests__cte_unnamed_params.snap  tidx__api__views__tests__pushdown_multiple_addresses.snap  tidx__api__views__tests__pushdown_single_address.snap  tidx__api__views__tests__runtime_sql_simple_query.snap  tidx__api__views__tests__runtime_sql_with_pushdown.snap  tidx__api__views__tests__view_approval_allowances.snap  tidx__api__views__tests__view_daily_stats.snap  (+6 more)
src/cli/: api_key.rs  backfill_receipt_data.rs  compress.rs  init.rs  mcp.rs  mod.rs  pgroll.rs  query.rs  query_logs.rs  status.rs  sync.rs  up.rs  upgrade.rs  views.rs
src/config/: watcher.rs
src/db/: duckdb.rs  duckdb_lsm.rs  mod.rs  pool.rs  schema.rs
src/mcp/: mod.rs  tools.rs
src/query/: mod.rs  parser.rs  router.rs  validator.rs
src/service/: mod.rs
src/sync/: ch_sink.rs  compress.rs  decoder.rs  engine.rs  fetcher.rs  mod.rs  parquet.rs  pg_parquet.rs  replicator.rs  sink.rs  writer.rs
tests/: api_live_test.rs  broadcast_test.rs  clickhouse_test.rs  gap_sync_test.rs  migration_test.rs  query_test.rs  seed_bench.rs  smoke_test.rs  status_test.rs  sync_optimizations_test.rs  virtual_address_e2e_test.rs
tests/common/: clickhouse.rs  mod.rs  seed.rs  tempo.rs  testdb.rs
(+21 files in other folders)
