[package]
name = "tidx"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tempoxyz/tidx"
description = "High-throughput Tempo blockchain indexer"

[[bin]]
name = "tidx"
path = "src/main.rs"

[lib]
name = "tidx"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures = "0.3"

# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }


# Ethereum/Tempo primitives
alloy = { version = "1", features = ["full"] }
tempo-alloy = { git = "https://github.com/tempoxyz/tempo", default-features = false }

# URL parsing
form_urlencoded = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# Crypto
sha3 = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ClickHouse
clickhouse = { version = "0.14", features = ["lz4", "chrono"] }

# Hex encoding
hex = "0.4"
rust_decimal = { version = "1.40.0", features = ["db-tokio-postgres"] }

# Random
rand = "0.9"
url = "2.5.8"

# File watching
notify = "8"

# Glob patterns
glob = "0.3"

# Interactive prompts
dialoguer = "0.11"
sqlparser = { version = "0.60.0", features = ["visitor"] }
regex-lite = "0.1.8"

[dev-dependencies]
# Testing & Benchmarks
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
hex-literal = "0.4"
insta = "1.46.3"
serial_test = "3"
tempfile = "3.24.0"

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "sync_bench"
harness = false

[profile.bench]
debug = true

[profile.test]
opt-level = 1

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
if_not_else = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
unnecessary_wraps = "allow"
return_self_not_must_use = "allow"
unused_async = "allow"
collapsible_if = "allow"
map_unwrap_or = "allow"
ref_option = "allow"
uninlined_format_args = "allow"
single_match_else = "allow"
manual_let_else = "allow"
needless_pass_by_value = "allow"
implicit_clone = "allow"
needless_borrow = "allow"
ptr_arg = "allow"
let_and_return = "allow"
implicit_hasher = "allow"
unnested_or_patterns = "allow"
needless_range_loop = "allow"
format_push_string = "allow"
unnecessary_cast = "allow"
cast_lossless = "allow"
