[package]
name = "tidx_abi"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for Ethereum ABI decoding - decode event logs from Parquet files"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.2.0", features = ["loadable-extension", "vtab", "vscalar", "vtab-arrow", "vtab-loadable"] }
libduckdb-sys = "=1.2.0"
duckdb-loadable-macros = "0.1"
alloy-primitives = "1"
